--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "countup.js": "^2.0.7",
     "gulp-changed": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-minify-css": "^1.2.4",
